# SpriterPlusPlus_SDL2

./: README.md
example/: CMakeLists.txt  main.cpp
example/override/: examplefilefactory.cpp  examplefilefactory.h  exampleobjectfactory.cpp  exampleobjectfactory.h  sdl2atlasfile.cpp  sdl2atlasfile.h  sdl2boneinstanceinfo.cpp  sdl2boneinstanceinfo.h  sdl2boxinstanceinfo.cpp  sdl2boxinstanceinfo.h  sdl2imagefile.cpp  sdl2imagefile.h  sdl2pointinstanceinfo.cpp  sdl2pointinstanceinfo.h  sdl2soundfile.cpp  sdl2soundfile.h  sdl2soundobjectinforeference.cpp  sdl2soundobjectinforeference.h  sfmlatlasfile.cpp  sfmlatlasfile.h  sfmlboneinstanceinfo.cpp  sfmlboneinstanceinfo.h  sfmlboxinstanceinfo.cpp  sfmlboxinstanceinfo.h  sfmlimagefile.cpp  sfmlimagefile.h  sfmlpointinstanceinfo.cpp  sfmlpointinstanceinfo.h  sfmlsoundfile.cpp  sfmlsoundfile.h  sfmlsoundobjectinforeference.cpp  sfmlsoundobjectinforeference.h
spriterengine/: CMakeLists.txt
